# rust__tasks

./: Cargo.toml  LICENSE  PLAN.md  README.md  Taskfile.yml
crates/run-cli/: Cargo.toml
crates/run-cli/src/: main.rs
crates/run-cli/tests/: integration.rs
crates/syon-integration/: Cargo.toml
crates/syon-integration/src/: lib.rs
crates/task-runner/: Cargo.toml
crates/task-runner/src/: lib.rs
crates/taskfile-loader/: Cargo.toml
crates/taskfile-loader/src/: lib.rs
crates/taskfile-schema/: Cargo.toml
crates/taskfile-schema/src/: lib.rs
