[package]
name    = "run-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run"
path = "src/main.rs"

[features]
bundled-python = ["dep:pyembed"]

[dependencies]
clap             = { workspace = true }
taskfile-loader  = { workspace = true }
task-runner      = { workspace = true }
taskfile-schema  = { workspace = true }
syon-integration = { workspace = true }
serde_yaml       = { workspace = true }
colored          = { workspace = true }
pyembed          = { version = "0.24", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
